--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
           <use href="images/sprite.svg#menu"></use>
         </svg>
         <ul class="list nav-list collapsible-content">
-          <li class="nav-item"><a href="#">Hosting</a></li>
-          <li class="nav-item"><a href="#">VPS</a></li>
-          <li class="nav-item"><a href="#">Domain</a></li>
-          <li class="nav-item"><a href="#">Pricing</a></li>
+          <li class="nav-item"><a href="#">Front-end</a></li>
+          <li class="nav-item"><a href="#">Backend</a></li>
+          <li class="nav-item"><a href="#">Full-Stack</a></li>
+          <li class="nav-item"><a href="#">产品经理</a></li>
         </ul>
       </nav>
     </header>
@@ -45,13 +45,12 @@
     <section class="block block-dark left-skewed banner">
       <div class="container grid grid-col2">
         <header class="block-header banner-content">
-          <h1 data-aos="fade-right" class="block-heading">
-            Could Hosting for Pros
-          </h1>
+          <h1 data-aos="fade-right" class="block-heading">个人简介</h1>
           <p class="banner-content">
-            Deploy your websites in less than 60 seconds
+            加拿大西安大略大学毕业，计算机科学专业。熟悉 HTML5 CSS3 JavaScript
+            Vue Git Parcel node.js
           </p>
-          <a href="" class="btn btn-accent">GET STARTED</a>
+          <a href="" class="btn btn-accent">HIRE ME</a>
         </header>
         <picture data-aos="zoom-in">
           <source
@@ -69,16 +68,11 @@
     <!--search-->
     <section data-aos="fade-up" class="block container search">
       <header class="block-header">
-        <h2>Starting at 9$ per moonth</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias ex
-          laborum aliquam iure id molestias, sunt cupiditate culpa quibusdam
-          laboriosam fugit a corrupti similique rerum eum voluptatem est velit
-          vero.
-        </p>
+        <h2>CSS3 布局练习</h2>
+        <p>flex和grid很好用，还有css动画带来的视觉效果，下滑体验效果</p>
       </header>
       <div class="input-group">
-        <input type="text" class="input" placeholder="Enter domain name here" />
+        <input type="text" class="input" placeholder="Enter here" />
         <button class="btn btn-accent">
           <svg class="icon iconWhite">
             <use href="images/sprite.svg#search"></use>
@@ -101,19 +95,20 @@
         <div class="plan">
           <div class="card card-secondary">
             <header class="card-header">
-              <h3 class="plan-name">Plan A</h3>
-              <span class="plan-price">$140</span>
-              <span class="plan-monthly">/month</span>
-              <span class="badge badgeSecondary badgeSmall">10%off</span>
-              <span class="plan-description">Easy start on the cloud</span>
+              <h3 class="plan-name">HTML</h3>
+              <span class="plan-price">20</span>
+              <span class="plan-monthly">hours</span>
+              <span class="badge badgeSecondary badgeSmall">总用时1周</span>
+              <span class="plan-description">Easy start on the web</span>
             </header>
             <div class="card-body">
               <ul class="list listChecked">
-                <li class="list-item">Unlimited Websites</li>
-                <li class="list-item">Unlimited Bandwidth</li>
-                <li class="list-item">100 GB SSD Storage</li>
+                <li class="list-item">Flex/Grid布局</li>
+                <li class="list-item">CSS 动画</li>
+                <li class="list-item">HTML5 语义化和搜索引擎</li>
+                <li class="list-item">Obejct Oriented CSS</li>
               </ul>
-              <button class="btn btn-outline btn-block">Buy Now</button>
+              <button class="btn btn-outline btn-block">Hire Now</button>
             </div>
           </div>
         </div>
@@ -121,19 +116,20 @@
         <div class="plan plan-popular">
           <div class="card card-primary">
             <header class="card-header">
-              <h3 class="plan-name">Plan A</h3>
-              <span class="plan-price">$140</span>
-              <span class="plan-monthly">/month</span>
-              <span class="badge badgePrimary badgeSmall">10%off</span>
-              <span class="plan-description">Easy start on the cloud</span>
+              <h3 class="plan-name">HTML&CSS</h3>
+              <span class="plan-price">20</span>
+              <span class="plan-monthly">hours</span>
+              <span class="badge badgePrimary badgeSmall">总用时2周</span>
+              <span class="plan-description">Easy start on the web</span>
             </header>
             <div class="card-body">
               <ul class="list listChecked">
-                <li class="list-item">Unlimited Websites</li>
-                <li class="list-item">Unlimited Bandwidth</li>
-                <li class="list-item">100 GB SSD Storage</li>
+                <li class="list-item">Flex/Grid布局</li>
+                <li class="list-item">CSS 动画</li>
+                <li class="list-item">HTML5 语义化和搜索引擎</li>
+                <li class="list-item">Obejct Oriented CSS</li>
               </ul>
-              <button class="btn btn-outline btn-block">Buy Now</button>
+              <button class="btn btn-outline btn-block">Hire Now</button>
             </div>
           </div>
         </div>
@@ -141,19 +137,20 @@
         <div class="plan">
           <div class="card card-secondary">
             <header class="card-header">
-              <h3 class="plan-name">Plan A</h3>
-              <span class="plan-price">$140</span>
-              <span class="plan-monthly">/month</span>
-              <span class="badge badgeSecondary badgeSmall">10%off</span>
-              <span class="plan-description">Easy start on the cloud</span>
+              <h3 class="plan-name">CSS</h3>
+              <span class="plan-price">20</span>
+              <span class="plan-monthly">hours</span>
+              <span class="badge badgeSecondary badgeSmall">总用时1周</span>
+              <span class="plan-description">Easy start on the web</span>
             </header>
             <div class="card-body">
               <ul class="list listChecked">
-                <li class="list-item">Unlimited Websites</li>
-                <li class="list-item">Unlimited Bandwidth</li>
-                <li class="list-item">100 GB SSD Storage</li>
+                <li class="list-item">Flex/Grid布局</li>
+                <li class="list-item">CSS 动画</li>
+                <li class="list-item">HTML5 语义化和搜索引擎</li>
+                <li class="list-item">Obejct Oriented CSS</li>
               </ul>
-              <button class="btn btn-outline btn-block">Buy Now</button>
+              <button class="btn btn-outline btn-block">Hire Now</button>
             </div>
           </div>
         </div>
@@ -163,7 +160,7 @@
 
     <section class="block container">
       <header class="block-header">
-        <h2>Host on the cloud to keep growing</h2>
+        <h2>Live on the web to keep learning</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
           esse recusandae eveniet saepe vero veritatis eum dicta. Iusto
@@ -356,7 +353,7 @@
     <!--Customer feedback-->
     <section class="block" data-aos="zoom-in">
       <header class="block-header">
-        <h2>Customer Feedback</h2>
+        <h2>HTML&CSS 总结</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur
           commodi magnam quisquam impedit! Ut est vero eum quae ex nihil atque
