--- a/index.html
+++ b/index.html
@@ -34,10 +34,26 @@
           <use href="images/sprite.svg#menu"></use>
         </svg>
         <ul class="list nav-list collapsible-content">
-          <li class="nav-item"><a href="#">Front-end</a></li>
-          <li class="nav-item"><a href="#">Backend</a></li>
-          <li class="nav-item"><a href="#">Full-Stack</a></li>
-          <li class="nav-item"><a href="#">产品经理</a></li>
+          <li class="nav-item">
+            <a
+              href="https://react-page-michaelshan.netlify.app/"
+              target="_blank"
+              >项目</a
+            >
+          </li>
+          <li class="nav-item">
+            <a href="https://github.com/MichaelShan1" target="_blank">GitHub</a>
+          </li>
+          <li class="nav-item">
+            <a href="https://github.com/MichaelShan1/Notes" target="_blank"
+              >学习笔记</a
+            >
+          </li>
+          <li class="nav-item">
+            <a href="https://michalsnik.github.io/aos/" target="_blank"
+              >滑动动画详情</a
+            >
+          </li>
         </ul>
       </nav>
     </header>
@@ -48,9 +64,9 @@
           <h1 data-aos="fade-right" class="block-heading">个人简介</h1>
           <p class="banner-content">
             加拿大西安大略大学毕业，计算机科学专业。熟悉 HTML5 CSS3 JavaScript
-            Vue Git Parcel node.js
+            React Bootstrap
           </p>
-          <a href="" class="btn btn-accent">HIRE ME</a>
+          <button class="btn btn-accent scroll-to">微信联系</button>
         </header>
         <picture data-aos="zoom-in">
           <source
@@ -353,7 +369,7 @@
     <!--Customer feedback-->
     <section class="block" data-aos="zoom-in">
       <header class="block-header">
-        <h2>HTML&CSS 总结</h2>
+        <h2 id="scorll-here">微信扫一扫添加好友</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur
           commodi magnam quisquam impedit! Ut est vero eum quae ex nihil atque
@@ -364,7 +380,7 @@
       <div class="card testimonial">
         <div class="grid grid-col2">
           <div class="testimonial-image">
-            <img src="images/testimonial.jpg" alt="a happy customer" />
+            <img src="images/QRcode.jpg" alt="a happy customer" />
             <span class="icon-container icon-container-accent">
               <svg class="icon iconWhite icon-small">
                 <use href="images/sprite.svg#quotes"></use>
@@ -388,8 +404,8 @@
                   </svg>
                 </div>
                 <div class="media-body">
-                  <h3 class="media-header quote-author">John Smith</h3>
-                  <p class="quote-company">ABC co.</p>
+                  <h3 class="media-header quote-author">单公旭</h3>
+                  <p class="quote-company">Web 前端开发</p>
                 </div>
               </div>
             </footer>
