--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
     <meta property="og:type" content="Website" />
     <meta property="og:image" content="http://" />
     <meta property="og:url" content="https://" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Michael's Web</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -64,7 +71,7 @@
           <h1 data-aos="fade-right" class="block-heading">个人简介</h1>
           <p class="banner-content">
             加拿大西安大略大学毕业，计算机科学专业。熟悉 HTML5 CSS3 JavaScript
-            React Bootstrap
+            React Bootstrap Git Node.js
           </p>
           <button class="btn btn-accent scroll-to">微信联系</button>
         </header>
@@ -84,47 +91,88 @@
     <!--search-->
     <section data-aos="fade-up" class="block container search">
       <header class="block-header">
-        <h2>CSS3 布局练习</h2>
-        <p>flex和grid很好用，还有css动画带来的视觉效果，下滑体验效果</p>
+        <h2>HTML5 + CSS3 布局练习</h2>
+        <p>下滑体验CSS动画</p>
       </header>
-      <div class="input-group">
-        <input type="text" class="input" placeholder="Enter here" />
-        <button class="btn btn-accent">
-          <svg class="icon iconWhite">
-            <use href="images/sprite.svg#search"></use>
-          </svg>
-          Search
+    </section>
+    <!--轮播图-->
+    <div class="container-carousel">
+      <div id="carouselExampleIndicators" class="carousel slide m-3">
+        <div class="carousel-indicators">
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="0"
+            class="active"
+            aria-current="true"
+            aria-label="Slide 1"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="1"
+            aria-label="Slide 2"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="2"
+            aria-label="Slide 3"
+          ></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="images/image2.jpg" class="d-block w-100" alt="..." />
+          </div>
+          <div class="carousel-item">
+            <img src="images/image1.jpg" class="d-block w-100" alt="..." />
+          </div>
+          <div class="carousel-item">
+            <img src="images/image3.jpg" class="d-block w-100" alt="..." />
+          </div>
+        </div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
         </button>
       </div>
-      <ul class="list prices">
-        <li><span class="badge badgeSecondary">.com $9</span></li>
-        <li>.sg $10</li>
-        <li>.space $11</li>
-        <li>.info $14</li>
-        <li>.net $10</li>
-        <li>.xyz $10</li>
-      </ul>
-    </section>
+    </div>
     <!--plans-->
     <section data-aos="fade-up" class="block container plans">
       <div class="grid grid-col3">
         <div class="plan">
           <div class="card card-secondary">
             <header class="card-header">
-              <h3 class="plan-name">HTML</h3>
-              <span class="plan-price">20</span>
+              <h3 class="plan-name">JavaScript</h3>
+              <span class="plan-price">60</span>
               <span class="plan-monthly">hours</span>
-              <span class="badge badgeSecondary badgeSmall">总用时1周</span>
+              <span class="badge badgeSecondary badgeSmall">总用时2个月</span>
               <span class="plan-description">Easy start on the web</span>
             </header>
             <div class="card-body">
               <ul class="list listChecked">
-                <li class="list-item">Flex/Grid布局</li>
-                <li class="list-item">CSS 动画</li>
-                <li class="list-item">HTML5 语义化和搜索引擎</li>
-                <li class="list-item">Obejct Oriented CSS</li>
+                <li class="list-item">ES6</li>
+                <li class="list-item">OOP JavaScript</li>
+                <li class="list-item">Prototype</li>
+                <li class="list-item">数据结构</li>
               </ul>
-              <button class="btn btn-outline btn-block">Hire Now</button>
+              <button class="btn btn-outline btn-block scroll-to">
+                联系我吧
+              </button>
             </div>
           </div>
         </div>
@@ -145,7 +193,9 @@
                 <li class="list-item">HTML5 语义化和搜索引擎</li>
                 <li class="list-item">Obejct Oriented CSS</li>
               </ul>
-              <button class="btn btn-outline btn-block">Hire Now</button>
+              <button class="btn btn-outline btn-block scroll-to">
+                联系我吧
+              </button>
             </div>
           </div>
         </div>
@@ -153,20 +203,25 @@
         <div class="plan">
           <div class="card card-secondary">
             <header class="card-header">
-              <h3 class="plan-name">CSS</h3>
-              <span class="plan-price">20</span>
+              <h3 class="plan-name">React18 + TypeScript</h3>
+              <span class="plan-price">40</span>
               <span class="plan-monthly">hours</span>
-              <span class="badge badgeSecondary badgeSmall">总用时1周</span>
-              <span class="plan-description">Easy start on the web</span>
+              <span class="badge badgeSecondary badgeSmall">总用时2个月</span>
+              <span class="plan-description">最新项目</span>
             </header>
             <div class="card-body">
               <ul class="list listChecked">
-                <li class="list-item">Flex/Grid布局</li>
-                <li class="list-item">CSS 动画</li>
-                <li class="list-item">HTML5 语义化和搜索引擎</li>
-                <li class="list-item">Obejct Oriented CSS</li>
+                <li class="list-item">自定义Hook</li>
+                <li class="list-item">Props & useState</li>
+                <li class="list-item">TS 泛型类型</li>
               </ul>
-              <button class="btn btn-outline btn-block">Hire Now</button>
+              <button class="btn btn-outline btn-block">
+                <a
+                  href="https://react-page-michaelshan.netlify.app/"
+                  target="_blank"
+                  >查看项目</a
+                >
+              </button>
             </div>
           </div>
         </div>
@@ -479,6 +534,11 @@
         </section>
       </div>
     </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+      crossorigin="anonymous"
+    ></script>
 
     <script src="js/main.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
