--- a/index.html
+++ b/index.html
@@ -122,13 +122,28 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/image2.jpg" class="d-block w-100" alt="..." />
+            <img
+              src="images/image2low.jpg"
+              data-src="images/image2.jpg"
+              class="d-block w-100 lazy-img"
+              alt="..."
+            />
           </div>
           <div class="carousel-item">
-            <img src="images/image1.jpg" class="d-block w-100" alt="..." />
+            <img
+              src="images/image1low.jpg"
+              data-src="images/image1.jpg"
+              class="d-block w-100 lazy-img"
+              alt="..."
+            />
           </div>
           <div class="carousel-item">
-            <img src="images/image3.jpg" class="d-block w-100" alt="..." />
+            <img
+              src="images/image3low.jpg"
+              data-src="images/image3.jpg"
+              class="d-block w-100 lazy-img"
+              alt="..."
+            />
           </div>
         </div>
         <button
