Made changes to text content

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 
     <section class="block container">
       <header class="block-header">
-        <h2>Live on the web to keep learning</h2>
+        <h2></h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
           esse recusandae eveniet saepe vero veritatis eum dicta. Iusto
@@ -260,13 +260,13 @@
               <use href="images/sprite.svg#easy"></use>
             </svg>
           </span>
-          <h3 class="feature-heading">Super easy to use</h3>
+          <h3 class="feature-heading">沟通方便回复速度快</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
             debitis architecto quod libero porro voluptate reiciendis harum
             dignissimos.
           </p>
-          <a href="#" class="link-arrow">Learn More</a>
+          <button class="btn-wechat link-arrow scroll-to">Learn More</button>
         </div>
         <picture data-aos="zoom-in-left">
           <source
@@ -288,13 +288,18 @@
               <use href="images/sprite.svg#computer"></use>
             </svg>
           </span>
-          <h3 class="feature-heading">Simply Fast Websites</h3>
+          <h3 class="feature-heading">网站性能优化</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
             debitis architecto quod libero porro voluptate reiciendis harum
             dignissimos.
           </p>
-          <a href="#" class="link-arrow">Learn More</a>
+          <a
+            href="https://stackoverflow.com/"
+            target="_blank"
+            class="link-arrow"
+            >Learn More</a
+          >
         </div>
         <picture>
           <source
@@ -316,13 +321,18 @@
               <use href="images/sprite.svg#wordpress"></use>
             </svg>
           </span>
-          <h3 class="feature-heading">Wordpress Made Easy</h3>
+          <h3 class="feature-heading">乐于学习前端技术</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
             debitis architecto quod libero porro voluptate reiciendis harum
             dignissimos.
           </p>
-          <a href="#" class="link-arrow">Learn More</a>
+          <a
+            href="https://www.youtube.com/@WebDevSimplified"
+            target="_blank"
+            class="link-arrow"
+            >Learn More</a
+          >
         </div>
         <picture>
           <source
@@ -344,13 +354,18 @@
               <use href="images/sprite.svg#clock"></use>
             </svg>
           </span>
-          <h3 class="feature-heading">24/7 Expert Support</h3>
+          <h3 class="feature-heading">解决绝所有技术问题</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
             debitis architecto quod libero porro voluptate reiciendis harum
             dignissimos.
           </p>
-          <a href="#" class="link-arrow">Learn More</a>
+          <a
+            href="https://stackoverflow.com/"
+            target="_blank"
+            class="link-arrow"
+            >Learn More</a
+          >
         </div>
         <picture>
           <source
@@ -489,28 +504,32 @@
       <div class="container grid footer-grid">
         <section class="collapsible footer-section">
           <div class="collapsible-header">
-            <h2 class="collapsible-heading footer-heading">Products</h2>
+            <h2 class="collapsible-heading footer-heading">联系</h2>
             <img class="icon rotate-img" src="images/chevron.svg" />
           </div>
           <div class="collapsible-content">
             <ul class="list">
-              <li><a href="#">Website Hosting</a></li>
-              <li><a href="#">Free Automated Wordpress</a></li>
-              <li><a href="#">Migrations</a></li>
+              <li><a href="#">微信</a></li>
+              <li><a href="#">邮箱</a></li>
+              <li><a href="#">GitHub</a></li>
             </ul>
           </div>
         </section>
         <!--item2-->
         <section class="collapsible footer-section">
           <div class="collapsible-header">
-            <h2 class="collapsible-heading footer-heading">Company</h2>
+            <h2 class="collapsible-heading footer-heading">学校</h2>
             <img class="icon rotate-img" src="images/chevron.svg" />
           </div>
           <div class="collapsible-content">
             <ul class="list">
-              <li><a href="#">About</a></li>
-              <li><a href="#">Affiliates</a></li>
-              <li><a href="#">Blog</a></li>
+              <li>
+                <a
+                  href="https://zh.wikipedia.org/wiki/%E8%A5%BF%E5%AE%89%E5%A4%A7%E7%95%A5%E5%A4%A7%E5%AD%A6"
+                  target="_blank"
+                  >简介</a
+                >
+              </li>
             </ul>
           </div>
         </section>
@@ -541,9 +560,9 @@
           </div>
           <div class="collapsible-content">
             <ul class="list">
-              <li><a href="#">Domain Checker</a></li>
-              <li><a href="#">Domain Transfer</a></li>
-              <li><a href="#">Free Domain</a></li>
+              <li><a href="#">ABC</a></li>
+              <li><a href="#">ABC</a></li>
+              <li><a href="#">ABC</a></li>
             </ul>
           </div>
         </section>
