update notes link

--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
             <a href="https://github.com/MichaelShan1" target="_blank">GitHub</a>
           </li>
           <li class="nav-item">
-            <a href="https://github.com/MichaelShan1/Notes" target="_blank"
+            <a
+              href="https://github.com/MichaelShan1/Frontend-Notes"
+              target="_blank"
               >学习笔记</a
             >
           </li>
