resize image and lazy loading for QRcode

--- a/index.html
+++ b/index.html
@@ -467,7 +467,12 @@
       <div class="card testimonial">
         <div class="grid grid-col2">
           <div class="testimonial-image">
-            <img src="images/QRcode.jpg" alt="a happy customer" />
+            <img
+              class="QRcode lazy-img"
+              src="images/QRcodelow.jpg"
+              data-src="images/QRcode.jpg"
+              alt="a happy customer"
+            />
             <span class="icon-container icon-container-accent">
               <svg class="icon iconWhite icon-small">
                 <use href="images/sprite.svg#quotes"></use>
